tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/virtualservice/rewrite_authority/a/to_b/_test_context/VirtualService.305817705.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-60257
spec:
  hosts:
  - b
  http:
  - match:
    - uri:
        exact: /foo
    rewrite:
      authority: new-authority
    route:
    - destination:
        host: b
